Add loguru and selectolax libraries Update poetry.lock and pyproject.toml Add functions to display stock information in detail Update Check\_value\_stock.py to use new libraries and functions
Note: The diff includes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ requests = "^2.31.0"
 beautifulsoup4 = "^4.12.3"
 black = "^24.4.0"
 rich = "^13.7.1"
+loguru = "^0.7.2"
+selectolax = "^0.3.21"
 
 
 [build-system]
