--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,10 @@
     "sonarlint.connectedMode.project": {
         "connectionId": "",
         "projectKey": ""
-    }
+    },
+    "docwriter.progress.trackFunctions": true,
+    "docwriter.style": "Google",
+    "docwriter.progress.trackMethods": true,
+    "docwriter.progress.trackClasses": true,
+    "docwriter.progress.trackTypes": true,
 }
